--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Service library for www.brewerydb.com",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/index.js"
+    "test": "VCR_MODE=cache tape test/index.js"
   },
   "author": "Daniel Ochoa <dannytenaglias@gmail.com>",
   "license": "MIT",
