--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Service library for www.brewerydb.com",
   "main": "index.js",
   "scripts": {
-    "test": "VCR_MODE=cache tape test/*.js",
-    "ci-test":  "VCR_MODE=playback tape test/*.js | faucet"
+    "test":  "VCR_MODE=playback tape test/*.js | faucet",
+    "test-manually": "VCR_MODE=cache tape test/*.js"
   },
   "author": "Daniel Ochoa <dannytenaglias@gmail.com>",
   "license": "MIT",
